--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-native-snap-carousel": "^3.8.6",
+    "axios": "^1.5.1",
     "i18next": "^23.2.3",
     "react": "18.2.0",
     "react-i18next": "^13.0.1",
@@ -25,8 +27,10 @@
     "react-native-gesture-handler": "^2.12.0",
     "react-native-mmkv": "^2.10.0",
     "react-native-reanimated": "^3.3.0",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-redux": "^8.1.1",
     "redux-persist": "^6.0.0"
   },
