--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -42,3 +42,7 @@ newArchEnabled=true
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+MYAPP_UPLOAD_STORE_FILE=keystore.jks
+MYAPP_UPLOAD_KEY_ALIAS=campus365
+MYAPP_UPLOAD_STORE_PASSWORD=campus365
+MYAPP_UPLOAD_KEY_PASSWORD=campus365
